# projects

./: .gitignore  flake.nix  jupyterlab.nix  readme.md
2024/apertium-nix/: package.nix
2024/cpp/: makefile
2024/fourier-stuff/: .gitattributes  main.py  output.mid  shell.nix
2024/haskell/: halveringsmetode.hs  quicksort.hs
2024/more-manim/: __init__.py  main.py  shell.nix
2024/pyedifice-test/: .envrc  shell.nix
2024/sudoku-test/: v2-custom-types.hs  v3-reduce-possibilities.hs  v4-optimal-reduction.hs
2024/unibok-download/: .envrc  main.py
2024/unibok-download-playwright/: .envrc
2024/web-scraping/: output.csv  shell.nix
2024/wxpython-test/: shell.nix
2025/lilypond/: test.ly
2025/manim/: .envrc  main.py
2025/nio-runde2/: readme.md
2025/openstreetmap-api/: .envrc  main.py  shell.nix
2025/osm-gui/: main.py
2026/atom/: 01-basic-hydrogen.py  shell.nix  (+2 more)
it1/: boilerplate.html  readme.md  shell.nix
it2/: readme.md  shell.nix
julekalender/: readme.md
julekalender/2024/knowit/luke11/v2/: CHANGELOG.md  luke11.cabal
julekalender/2024/knowit/luke11/v2/app/: Main.hs  Main2.hs
julekalender/2024/knowit/luke11/v2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
jupyter/: kernels.nix
project-euler/: p001.hs  p002.hs  p011.hs  p013.hs  p015.hs  p016.hs  p017.hs  p021.hs  p022.hs  p023.hs  p024.hs  p025.hs  p027.hs  problem005.hs  problem009.hs  problem012.hs  problem014.hs  problem020.hs  readme.md
r1/: grenseverdier.ipynb  newtonsmetode.ipynb  shell.nix
r2/: shell.nix
(+851 files in other folders)
